--- a/public/index.html
+++ b/public/index.html
@@ -22,22 +22,21 @@
     <title>
       John Hetlage || Web Developer, Programmer, Maker & Entrepreneur
     </title>
-    <!-- Hotjar Tracking Code for http://trydo.rainbowit.net -->
-    <script>
-      (function (h, o, t, j, a, r) {
-        h.hj =
-          h.hj ||
-          function () {
-            (h.hj.q = h.hj.q || []).push(arguments);
-          };
-        h._hjSettings = { hjid: 1639136, hjsv: 6 };
-        a = o.getElementsByTagName("head")[0];
-        r = o.createElement("script");
-        r.async = 1;
-        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
-        a.appendChild(r);
-      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
-    </script>
+    <!-- OpenGraph tags -->
+    <meta
+      name="description"
+      content="Welcome to JohnHetlage.com. This site is dedicated to provide a view into my world."
+    />
+    <meta property="og:url" content="https://www.johnhetlage.com" />
+    <meta name="og:type" content="website" />
+    <meta
+      property="og:description"
+      content="Welcome to JohnHetlage.com. This site is dedicated to provide a view into my world."
+    />
+    <meta
+      property="og:image"
+      content="/assets/images/matrix-2354492_1280.jpg"
+    />
   </head>
 
   <body>
