Fixed 404 page and cleanup

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     />
     <meta
       property="og:image"
-      content="/assets/images/matrix-2354492_1280.jpg"
+      content="https://www.johnhetlage.com/public/images/matrix-2354492_1280.jpg"
     />
   </head>
 
