clean up files and added portfolio slider

--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,14 @@
     <title>
       John Hetlage || Web Developer, Programmer, Maker & Entrepreneur
     </title>
-    <!-- OpenGraph tags -->
     <meta
       name="description"
       content="Welcome to JohnHetlage.com. This site is dedicated to provide a view into my world."
+    />
+    <!-- OpenGraph tags -->
+    <meta
+      property="og:title"
+      content="John Hetlage || Web Developer, Programmer, Maker & Entrepreneur"
     />
     <meta property="og:url" content="https://www.johnhetlage.com" />
     <meta name="og:type" content="website" />
