changed meta descriptions and blog image display

--- a/public/index.html
+++ b/public/index.html
@@ -20,22 +20,26 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>
-      John Hetlage || Web Developer, Programmer, Maker & Entrepreneur
+      John Hetlage | Web Developer | Programmer | Maker & Entrepreneur
     </title>
     <meta
       name="description"
-      content="Welcome to JohnHetlage.com. This site is dedicated to provide a view into my world."
+      content="John Hetlage is an experienced developer in Kansas City. Mr. Hetlage also has professional leadership experience."
+    />
+    <meta
+      name="keywords"
+      content="hetlage,john hetlage, software developer kc, web developer kc"
     />
     <!-- OpenGraph tags -->
     <meta
       property="og:title"
-      content="John Hetlage || Web Developer, Programmer, Maker & Entrepreneur"
+      content="John Hetlage | Web Developer | Programmer | Maker & Entrepreneur"
     />
     <meta property="og:url" content="https://www.johnhetlage.com" />
     <meta name="og:type" content="website" />
     <meta
       property="og:description"
-      content="Welcome to JohnHetlage.com. This site is dedicated to provide a view into my world."
+      content="John Hetlage is an experienced developer in Kansas City. Mr. Hetlage also has professional leadership experience."
     />
     <meta
       property="og:image"
